--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.12.3",
     "cssnano": "^3.5.2",
     "del": "^2.2.0",
@@ -24,5 +25,11 @@
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-uglify": "^1.5.3"
+  },
+  "dependencies": {
+    "browserify": "^13.0.1",
+    "chart.js": "^2.1.3",
+    "gulp-util": "^3.0.7",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
