--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "browserify": "^13.0.1",
     "chart.js": "^2.1.3",
     "gulp-util": "^3.0.7",
-    "vinyl-source-stream": "^1.1.0"
+    "lodash.assign": "^4.0.9",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
