--- a/package.json
+++ b/package.json
@@ -1,37 +1,42 @@
 {
-  "name": "gulp-starter",
+  "name": "coding-field",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --inline --hot",
+    "build": "webpack --config webpack.config.prod.js",
+    "dev": "webpack-dev-server"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Dkra/coding-field.git"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.3.0",
-    "browser-sync": "^2.12.3",
-    "cssnano": "^3.5.2",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-load-plugins": "^1.2.2",
-    "gulp-postcss": "^6.1.0",
-    "gulp-sass": "^2.3.1",
-    "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-uglify": "^1.5.3"
+  "bugs": {
+    "url": "https://github.com/Dkra/coding-field/issues"
   },
+  "homepage": "https://github.com/Dkra/coding-field#readme",
   "dependencies": {
-    "browserify": "^13.0.1",
-    "chart.js": "^2.1.3",
-    "gulp-util": "^3.0.7",
-    "lodash.assign": "^4.0.9",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "autoprefixer": "^6.3.6",
+    "babel-preset-react": "^6.5.0",
+    "html-webpack-plugin": "^2.17.0",
+    "path": "^0.12.7",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "css-loader": "^0.23.1",
+    "html-loader": "^0.4.3",
+    "node-sass": "^3.7.0",
+    "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1"
   }
 }
