--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --hot",
+    "start": "node server.js",
     "build": "webpack --config webpack.config.prod.js",
     "dev": "webpack-dev-server"
   },
