--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "path": "^0.12.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
