--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
   "homepage": "https://github.com/Dkra/coding-field#readme",
   "dependencies": {
     "autoprefixer": "^6.3.6",
+    "axios": "^0.12.0",
     "babel-preset-react": "^6.5.0",
     "html-webpack-plugin": "^2.17.0",
     "path": "^0.12.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
+    "react-sparklines": "^1.5.2",
     "redux": "^3.5.2",
+    "redux-promise": "^0.5.3",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
