--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-2": "^6.5.0",
     "css-loader": "^0.23.1",
     "html-loader": "^0.4.3",
     "node-sass": "^3.7.0",
