--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   "dependencies": {
     "autoprefixer": "^6.3.6",
     "babel-preset-react": "^6.5.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.17.0",
     "path": "^0.12.7",
+    "radium": "^0.17.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
