--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
     "html-loader": "^0.4.3",
+    "jest-cli": "^12.1.1",
     "node-sass": "^3.7.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
