--- a/package.json
+++ b/package.json
@@ -43,8 +43,16 @@
     "html-loader": "^0.4.3",
     "jest-cli": "^12.1.1",
     "node-sass": "^3.7.0",
+    "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1"
+  },
+  "jest": {
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react/",
+      "<rootDir>/node_modules/react-dom/",
+      "<rootDir>/node_modules/react-addons-test-utils/"
+    ]
   }
 }
