--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.3.0",
     "browser-sync": "^2.12.3",
+    "chai": "^3.5.0",
     "cssnano": "^3.5.2",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
@@ -24,7 +25,10 @@
     "gulp-postcss": "^6.1.0",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "mocha": "^2.5.3",
+    "phantom": "^2.1.11",
+    "webpage": "^0.3.0"
   },
   "dependencies": {
     "browserify": "^13.0.1",
