--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "html-loader": "^0.4.3",
+    "mocha": "^3.1.0",
     "node-sass": "^3.7.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
