--- a/package.json
+++ b/package.json
@@ -1,45 +1,35 @@
 {
   "name": "coding-field",
   "version": "1.0.0",
-  "description": "",
+  "description": "always learning more",
   "main": "index.js",
-  "scripts": {
-    "start": "webpack-dashboard -- node server.js",
-    "build": "webpack --config webpack.config.prod.js",
-    "dev": "webpack-dev-server"
-  },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Dkra/coding-field.git"
+    "url": "git@github.com:Dkra/coding-field.git",
+    "type": "git"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Dkra/coding-field/issues"
-  },
-  "homepage": "https://github.com/Dkra/coding-field#readme",
+  "author": "Roger Jiang",
+  "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^6.3.6",
-    "babel-preset-react": "^6.5.0",
-    "html-webpack-plugin": "^2.17.0",
-    "path": "^0.12.7",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "devDependencies": {
-    "babel-core": "^6.9.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
+    "autoprefixer": "^6.5.1",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
-    "html-loader": "^0.4.3",
-    "mocha": "^3.1.0",
-    "node-sass": "^3.7.0",
-    "react-hot-loader": "^1.3.0",
-    "sass-loader": "^3.2.0",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.22.0",
+    "mocha": "^3.1.2",
+    "node-sass": "^3.10.1",
+    "path": "^0.12.7",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "webpack-dashboard": "^0.1.1"
+    "webpack": "^1.13.2",
+    "webpack-dashboard": "^0.2.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
