--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "always learning more",
   "main": "index.js",
+  "scripts": {
+    "start": "webpack-dashboard -- node server.js",
+    "test": "mocha --require babel-register"
+  },
   "repository": {
     "url": "git@github.com:Dkra/coding-field.git",
     "type": "git"
@@ -15,14 +19,16 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
     "chai": "^3.5.0",
+    "child_process": "^1.0.2",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fs": "^0.0.1-security",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
     "mocha": "^3.1.2",
     "node-sass": "^3.10.1",
-    "path": "^0.12.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
