--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "webpack": "^1.13.2",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-server": "^1.16.2"
+  },
+  "devDependencies": {
+    "nightmare": "^2.9.1"
   }
 }
