--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs": "^0.0.1-security",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
+    "immutable": "^3.8.1",
     "mocha": "^3.1.2",
     "node-sass": "^3.10.1",
     "react": "^15.3.2",
