--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
+    "regenerator-runtime": "^0.10.3",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
@@ -40,6 +41,7 @@
     "webpack-dev-server": "^1.16.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
     "nightmare": "^2.9.1"
   }
 }
